# rust-macros

./: .gitignore  README.md  build.yml  db_url_non_prod  db_url_prod  dependency-reduced-pom.xml  dev.sh  pom.xml  prod.sh  rs.sh  s.py  secrets.sh
db/: README.md
db/april_8/: assets.csv
db/base/: prod_schema.sql  schema.sql
db/march_24_2025/: README.md  prod.ddl
db/thursday_24_2025/: attributes.csv  attributevalues.csv  distinct_orgs  duplicates.sh  emails  find_org.sh  geo.csv  geos.sh  import_org.sh  mappings.csv  parent_child.sh  practices.csv  practices2.csv  updates.sh
db/thursday_24_2025/prod/: attributevalues.csv  entityattributes.csv
deploy/pre-production/: application.yaml
deploy/production/: application.yaml
macros/: Cargo.toml
macros/src/: lib.rs
openapi/: .~lock.duplicates.csv#  Cargo.toml  data.csv  duplicates.csv  generated_handlers.rs  index.html  openapi.json  sorted.csv  tes  test.json
openapi/src/: lib.rs  main.rs
parser/src/: lib.rs
parser/tests/: tests.rs
server/: Cargo.toml  generated_handlers.rs
server/src/: main.rs
sql/: attributes.csv  attributevalues.csv  eav.ddl  entityattributes.sql  entityattributes2.sql
sql/.ipynb_checkpoints/: EAV Lab-checkpoint.ipynb
src/main/java/com/ibm/tel/: DirectoryWatcher.java  Main.java
src/main/rs/front/: Cargo.toml  index.html
src/main/rs/front/src/: lib.rs
src/main/rs/macros/: Cargo.toml
src/main/rs/macros/src/: lib.rs  select.rs
src/main/rs/openapi/src/: lib.rs
src/main/rs/parser/src/: lib.rs
src/main/rs/parser/tests/: tests.rs
src/main/rs/server/: Cargo.toml  dev.sh  generated_handlers.rs  schema.sh  schema.sql
src/main/rs/server/src/: main.rs
