[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json","stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres" ] }
tokio = { version = "1", features = ["full"] }
syn = { version = "2.0.85", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0"
serde_json = "1.0.132"
regex = "1.11.1"
parse = { path = "../parser" }


[lib]
proc-macro = true

[parse]
proc-macro = true

