[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
macros = { path = "../macros" }
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres", "tls-native-tls", "uuid" ] }

async-trait = "0.1.83"
actix-rt = "2.10"

[dev-dependencies] 
actix-http-test = "3.2.0"

