[package]
name = "front"
version = "0.1.0"
edition = "2024"
[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "HtmlElement","Response"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
macros = { path = "../macros" }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
[lib]
crate-type = ["cdylib"]
